--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Fylo Landing Page Master</title>
   </head>
-  <body class="font-body">
+  <body class="font-body bg-DarkBlueMainBackground p-5">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
